--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,14 +46,13 @@
     <string name="total_fat">Total Fat:</string>
     <string name="cholesterol">Cholesterol:</string>
     <string name="sodium">Sodium:</string>
-    <string name="total_carbohydrate">Total Carbohydrate:</string>
+    <string name="total_carbohydrate">Total Carbs:</string>
     <string name="sugars">Sugar:</string>
     <string name="dfiber">Dietary fiber:</string>
     <string name="potassium">Potassium:</string>
     <string name="protein">Protein:</string>
     <string name="search_text">Enter Food/Drink Name</string>
     <string name="loading_message">Uploading image. Please wait.</string>
-
 
     <string name="dialog_select_prompt">Choose a picture</string>
     <string name="dialog_select_camera">Camera</string>
