--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
         <item>Total Fat</item>
         <item>Cholesterol</item>
         <item>Sodium</item>
-        <item>Total Carbohydrate</item>
+        <item>Carbs</item>
         <item>Sugar</item>
         <item>Dietary Fiber</item>
         <item>Potassium</item>
